# haelixe

./: Cargo.toml  LICENSE-MIT  README.md  install.sh
.github/workflows/: ci.yml  release.yml
axiom-lab/: Cargo.toml
axiom-lab/src/: main.rs  test_axiom_0001.rs
haelixe-lab/: Cargo.toml
haelixe-lab/src/: main.rs  test_axiom_0002.rs  test_haelixe_0001.rs  test_haelixe_0004.rs  test_haelixe_0006.rs
haelixe-web/: about.html  index.html  script.js  styles.css
src/: autograd.rs  dtype.rs  layout.rs  lib.rs  main.rs  optim.rs  storage.rs  tensor.rs
src/gpu/: arena.rs  mod.rs
src/gpu/shaders/: batched_matmul.wgsl  binary_broadcast.wgsl  flash_attention.wgsl  reduce.wgsl  unary.wgsl
src/kernels/: activations.rs  binary.rs  broadcast.rs  concat.rs  layer_norm.rs  loss.rs  matmul.rs  mod.rs  reduce.rs  rms_norm.rs  softmax.rs  unary.rs
src/nn/: attention.rs  layer_norm.rs  linear.rs  mlp.rs  mod.rs  rms_norm.rs  transformer.rs
src/ops/: binary_broadcast.rs  cat.rs  cross_entropy.rs  flash_attention.rs  gelu.rs  layer_norm.rs  matmul.rs  mod.rs  mse_loss.rs  reduce.rs  rms_norm.rs  scalar_mul.rs  softmax.rs  transpose.rs  unary.rs  view.rs
tests/: autograd_tests.rs  tensor_tests.rs
