[package]
name = "haelixe"
version = "0.1.0"
edition = "2024"

[dependencies]
half = { version = "2.4", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }
rayon = "1.8"
fastrand = "2.0"
memmap2 = "0.9" 

wgpu = "0.20"      
pollster = "0.3"  
rand = "0.8"
[workspace]
members = [
    "haelixe-lab",
]


[package]
license = "MIT OR Apache-2.0"